[package]
name = "orb-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmtime = "11.0.1"
tokio = { version = "1.29.1", features = ["sync"] }
uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }
