[package]
name = "orb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["multipart"] }
maud = "0.25.0"
reqwest = { version = "0.11.18", features = ["multipart"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net", "sync"] }
orb-runtime = { path = "../orb-runtime" }
diesel = { version = "2.1.0", features = [ "sqlite" ] }
uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }
